--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div class="content">
 			  <h1>3D simulated Live match in Augmented Reality</h1>
 			  <div class="image-container">
-				<img src="fanisko_logo.png" alt="Fanisko Logo">
+				<img src="fanisko_white_logo.png" alt="Fanisko Logo">
 			  </div>
 			</div>
 		  </div>
