--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 		<div class="fullscreen-container">
 			<div class="content">
-			  <h1>3D simulated Live match in Augmented Reality</h1>
+			  <h1>3D simulated Live match in Augmented Reality with interaction</h1>
 			  <div class="image-container">
-				<img src="fanisko_white_logo.png" alt="Fanisko Logo">
+				<img src="fanisko_logo.png" alt="Fanisko Logo">
 			  </div>
 			</div>
 		  </div>
@@ -22,8 +22,7 @@
 
 		<!-- Import maps polyfill -->
 		<!-- Remove this when import maps will be widely supported -->
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 		<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
 		<script type="importmap">
@@ -36,5 +35,6 @@
 		</script>
 	
 		<script type="module" src="script.js"></script>
+		<script type="module" src="ui.js"></script>
 	</body>
 </html>
