--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<div class="fullscreen-container">
 			<div class="content">
-			  <h1>3D simulated Live match in Augmented Reality with interaction</h1>
+			  <h1>3D simulated Live match in Augmented Reality</h1>
 			  <div class="image-container">
 				<img src="fanisko_logo.png" alt="Fanisko Logo">
 			  </div>
@@ -22,7 +22,8 @@
 
 		<!-- Import maps polyfill -->
 		<!-- Remove this when import maps will be widely supported -->
-
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
 		<script type="importmap">
