--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<div class="fullscreen-container">
 			<div class="content">
-			  <h1>3D simulated Live match in Augmented Reality</h1>
+			  <h1>3D simulated Live match in Augmented Reality With Interaction</h1>
 			  <div class="image-container">
 				<img src="fanisko_logo.png" alt="Fanisko Logo">
 			  </div>
